Added ringbuffer implementation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /bin/Debug/netcoreapp3.0
+/obj/Debug/netcoreapp3.0
